# vxio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cscope.out  main.cc  vxio.framework.sln  vxio.framework.vcxproj  vxio.sln  vxio.vcxproj  vxio.vcxproj.filters
VxioApp/: VxioApp.vcxproj  VxioApp.vcxproj.filters  main.cc
cc/db/: schema.cc
cc/db/sqlite/: lite.cc
cc/interpret/: alu.cc  bloc.cc  interpret.cc  token_data.cc  types.cc  variable.cc  vxu.cc  xio.cc
cc/interpret/compiler/: axt.cc  context.cc  context_data.cc  declvar.cc  expression.cc  expressionast.cc  grammar.cc  parser.cc  parserbase.cc  vxu.cc_declvar.cc  vxu.cc_expression.cc
cc/lexer/: lexer.cc  token_data.cc
cc/util/: geometry.cc  iostr.cc  logger.cc  object.cc  rem.cc  rtdl.cc
cc/vconio/: vconio.cc  vdc.cc
conio++/: CMakeLists.txt  conio++.vcxproj  conio++.vcxproj.filters
conio++/cc/: conio++.cc  vdc.cc  widget.cc
conio++/include/vxio/conio++/: conio++.h  dll_config.h  vdc.h  widget.h
include/vxio/: dll_config.h
include/vxio/db/: schema.h
include/vxio/db/sqlite/: lite.h
include/vxio/interpret/: alu.h  bloc.h  interpret.h  types.h  variable.h  vxu.h  xio.h
include/vxio/interpret/compiler/: axt.h  context.h  context_data.h  declvar.h  expression.h  expressionast.h  grammar.h  parser.h  parserbase.h  parsers
include/vxio/lexer/: lexer.h  token_data.h
include/vxio/util/: expect.h  geometry.h  iostr.h  logger.h  object.h  rem.h  rtdl.h  source_location.h
include/vxio/vconio/: vconio.h  vdc.h
res/: mit licence text  scratch.vxu
util/: CMakeLists.txt  util.vcxproj  util.vcxproj.filters
util.bac/cc/: rem.cc
util.bac/include/vxio/util/: geometry.h  logger.h  object.h  rem.h
util/cc/: geometry.cc  logger.cc  rem.cc  rtdl.cc
util/include/vxio/util/: dll_config.h  geometry.h  iostr.h  logger.h  rem.h  rtdl.h  source_location.h
vault++/: CMakeLists.txt
vault++/cc/: vault.cc
vault++/include/vxio/vault++/: dll_config.h  vault.h
vxio/: CMakeLists.txt
vxio.tests/: CMakeLists.txt  main.cxx  vxio.tests.vcxproj  vxio.tests.vcxproj.filters
vxio.tests/diagnostic/: diagnostic.h
